--- a/.env
+++ b/.env
@@ -7,7 +7,7 @@ ALGORITHM=HS256
 ACCESS_TOKEN_EXPIRE_MINUTES=30
 
 # AI Configuration
-GEMINI_API_KEY='AIzaSyBNeTo5igp3jcH12eaXiEgMrlb2gT0EhLg'
+GEMINI_API_KEY='API_KEY'
 
 # App Configuration
 APP_NAME=Quiz Application API
