--- a/.env
+++ b/.env
@@ -18,7 +18,7 @@ DEBUG=True
 # This example uses Gmail.
 
 MAIL_USERNAME=deeeeepu16@gmail.com
-MAIL_PASSWORD=bqbb etpp ltxy hzqx   # Use an App Password, not your real password!
+MAIL_PASSWORD=password   # Use an App Password, not your real password!
 MAIL_FROM=deeeeepu16@gmail.com
 MAIL_PORT=587
 MAIL_SERVER=smtp.gmail.com
